syntax = "proto3";

package userService;

message ServiceResponseMeta {
    int32 statusCode = 1;
    string message = 2;
}

message User {
    string id = 1;
    string createdAt = 2;
    string updatedAt = 3;
    string email = 4;
    string avatar = 5;
    string createdBy = 6;
}
  
message PaginationMeta {
    int32 page = 1;
    int32 take = 2;
    int32 itemCount = 3;
    int32 pageCount = 4;
    bool hasPreviousPage = 5;
    bool hasNextPage = 6;
}

message GetAllUsersResponse {
    repeated User data = 1;
    PaginationMeta meta = 2;
}

message GetAllUserRequest {
    int32 take = 1;
    int32 page = 2;
    string q = 3;
}


message GetAllUserServiceResponse {
    GetAllUsersResponse response = 1;
    ServiceResponseMeta meta = 2;
}

service UserService {
  rpc getAllUsers(GetAllUserRequest) returns (GetAllUserServiceResponse);
}